@@ -1,3 +1,8 @@
+Wed Jun 26 12:08:51 2013  Tanaka Akira  <akr@fsij.org>
+
+	* test/socket/test_udp.rb: Close sockets explicitly.
+	  Don't use fixed port number.
+
 Wed Jun 26 07:27:17 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bigand_int): Fix a buffer over read.
